--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-media": "^1.10.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.2",
     "scrollreveal": "^4.0.7",
     "simple-parallax-js": "^5.6.2"
   },
