--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2",
     "scrollreveal": "^4.0.7",
-    "simple-parallax-js": "^5.6.2"
+    "simple-parallax-js": "^5.6.2",
+    "swiper": "^6.4.11"
   },
   "scripts": {
     "predeploy": "npm run build",
